# Physics-Simulations

./: .gitignore  CMakeLists.txt  README.md  journal.md  todo.txt
res/shaders/: 3d.shader  circle.shader  shader.poo  tri.shader
src/: 2d.cpp  2d.h  3d.cpp  3d.h  indexbuffer.cpp  indexbuffer.h  main.cpp  oldmain.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  shape.cpp  shapes.cpp  shapes.h  simulation.cpp  simulation.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h
